# major-project-2

./: README.md  main.py  pyproject.toml  requirement.TXT
backend/: package-lock.json  pyproject.toml
backend/ai/: agent.py  prompts.py
backend/ai/providers/: llm.py
backend/ai/tools/: analytic.py  jobs.py
backend/app/: dependencies.py
backend/app/db/: create_tables.py  database.py
backend/app/models/: job.py  job_skill.py  skill.py
backend/app/scheduler/: job_scheduler.py
backend/app/schemas/: job_schema.py
backend/app/services/: analytic.py  clean_jobs.py  cleaned.py  fetch_jobs.py  get_job_detail.py  job_service.py  normalize.py  print_jobs.py  save_job.py
backend/app/services/ingestion/: arbeitnow.py  remotive.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatBubble.jsx  ChatInput.jsx  FilterPanel.jsx  JobCard.jsx  Navbar.jsx  SearchBar.jsx  Sidebar.jsx  StatCard.jsx  SuggestedQuestions.jsx  TypingIndicator.jsx
frontend/src/pages/: AIChat.jsx  Analytics.jsx  Dashboard.jsx  JobDetails.jsx  Jobs.jsx
frontend/src/services/: api.js
notebooks/: analytics.ipynb
